# rag-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py  schemas.py
app/ingestion/: chunker.py  pdf_ingestor.py
app/retrieval/: answer_generator.py  embeddings.py  keyword_search.py  query_processor.py  semantic_search.py
app/storage/: chunk_reader.py  document_store.py  embedding_store.py
scripts/: bench_async.py  bench_bm25.py  bench_weights.py  qa_scorecard.py
ui/: app.js  index.html  styles.css
